Hide videos on mobile too fix

--- a/style.css
+++ b/style.css
@@ -112,6 +112,8 @@ img {
 @media only screen and (max-width: 600px) {
   #novideo,
   #ansvideo {
+    width: 0;
+    height: 0;
     display: none !important;
   }
 }
